<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.grchr</groupId>
  <artifactId>yf-project</artifactId>
  <version>0.0.11</version>
  <packaging>pom</packaging>

  <modules>
    <module>yf-project-bom</module>
    <module>yf-project-app</module>
    <module>yf-project-api</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>17</java.version>
  </properties>

  <!-- Shared distribution to GitHub Packages -->
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub grchr Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/grchr/yf-project</url>
    </repository>
  </distributionManagement>

</project>
